--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main class="container">
         <div class="logo">
-            <img class="logo-bombaDeCombustivel" src="/img/gas-pump-clipart-green-cartoon-gas-pump-vector_600003_wh860.png" alt="logo">
+            <img class="logo-bombaDeCombustivel" src="img/gas-pump-clipart-green-cartoon-gas-pump-vector_600003_wh860.png" alt="logo">
         </div>
         <div class="calc-container">
             <div class="calc-header">
@@ -32,7 +32,7 @@
                 <input type="text">
                <button>Calcular</button>
             </div>
-            <img class="logo-marcador" src="/img/—Pngtree—speedometer tachometer and fuel gauge_4773520.png" alt="">
+            <img class="logo-marcador" src="img/—Pngtree—speedometer tachometer and fuel gauge_4773520.png" alt="">
         </div>
 
     </main>
